# john-rules

./: design-notes.md  john-rules.cabal  readme.md
src/: API.hs  CabalStubs.hs  Examples.hs  ExternalHooks.hs  Monitor.hs  Rules.hs
